[gd_scene load_steps=9 format=3 uid="uid://c7jvy7pbmduc5"]

[ext_resource type="Script" uid="uid://brm4ahu68oa8x" path="res://UI/Buttons/SummaryBtn/summary_btn.gd" id="1_6lokw"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="2_3wkh5"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="3_dpcq0"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="4_3wkh5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3wkh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wkh5"]
bg_color = Color(1, 0.749, 0.2, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.580392)
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_dpcq0"]
font = ExtResource("4_3wkh5")
font_color = Color(0.05, 0.05, 0.05, 0.7)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_pchs1"]
font = ExtResource("3_dpcq0")
font_color = Color(0.05, 0.05, 0.05, 0.7)
outline_size = 2
outline_color = Color(0.185383, 0.185383, 0.185383, 0.498039)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.235294)

[node name="SummaryBtn" type="PanelContainer"]
offset_right = 133.0
offset_bottom = 26.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_3wkh5")
script = ExtResource("1_6lokw")
icon = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ActiveIcon" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_3wkh5")]
layout_mode = 2
icon = 72
icon_color = Color(1, 1, 1, 1)

[node name="IconPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wkh5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/IconPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="SVGIcon" parent="MarginContainer/HBoxContainer/IconPanel/MarginContainer" instance=ExtResource("2_3wkh5")]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 6
icon = 1
icon_color = Color(0.05, 0.05, 0.05, 0.7)
icon_size = Vector2(15, 15)

[node name="CheckboxPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wkh5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CheckboxPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CheckboxPanel/MarginContainer"]
layout_mode = 2

[node name="CheckBtn" parent="MarginContainer/HBoxContainer/CheckboxPanel/MarginContainer/HBoxContainer" instance=ExtResource("2_3wkh5")]
layout_mode = 2
size_flags_horizontal = 6
icon = 51
icon_color = Color(0.05, 0.05, 0.05, 0.7)

[node name="EnergyPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wkh5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/EnergyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/EnergyPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="SVGIcon" parent="MarginContainer/HBoxContainer/EnergyPanel/MarginContainer/HBoxContainer" instance=ExtResource("2_3wkh5")]
layout_mode = 2
size_flags_horizontal = 6
icon = 32
icon_color = Color(0.05, 0.05, 0.05, 0.7)

[node name="EnergyCostLabel" type="Label" parent="MarginContainer/HBoxContainer/EnergyPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_dpcq0")

[node name="CostPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wkh5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CostPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CostPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CostIcon" parent="MarginContainer/HBoxContainer/CostPanel/MarginContainer/HBoxContainer" instance=ExtResource("2_3wkh5")]
layout_mode = 2
size_flags_horizontal = 6
icon = 68
icon_color = Color(0.05, 0.05, 0.05, 0.7)

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer/CostPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_dpcq0")

[node name="TitlePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3wkh5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/TitlePanel"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TitlePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/TitlePanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TitlePanel/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/TitlePanel/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "TITLE"
label_settings = SubResource("LabelSettings_pchs1")
vertical_alignment = 1
autowrap_mode = 3
